--- a/src/global.css
+++ b/src/global.css
@@ -55,6 +55,10 @@ body {
     background-color: #d6d6d6;
 }
 
+.table_row.highlighted {
+    background-color: #c2c2c2;
+}
+
 .table_row:not(:last-child) {
   border-bottom: 1px solid #d6d6d6;
 }
